before multiple instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       node /app/index.js
 
   rocketchat:
-    image: rocketchat/rocket.chat:latest
+    image: rocketchat/rocket.chat:3.5.2
     command: >
       bash -c
         "for i in `seq 1 30`; do
