--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,21 @@
 {
-    "port": 5000,
+    "port": 3001,
     "instance": {
         "name": "instance1",
         "session_path": "/wapi_files/instance1/session.json",
         "qr_path": "/wapi_files/instance1/last.qr",
         "visitors_path": "/wapi_files/instance1/visitors/",
-        "number": "553399731315"
+        "media_path": "/wapi_files/instance1/media/",
+        "number": "5533XXXXXXX"
     },
     "rocketchat": {
         "enabled": true,
         "url": "http://rocketchat:3000",
-        "token": "secret2",
+        "admin_user": "debug",
+        "admin_password": "debug",
         "bot": "bot",
         "pass": "bot@0192",
-        "manager_user": "duda.nogueira"
+        "manager_user": "duda.nogueira",
+        "secret_token": "wapi_secret"
     }
 }
