--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rocket.chat/sdk": "^0.2.9-2",
     "axios": "^0.19.2",
+    "axios-auth-refresh": "^2.2.8",
     "express": "^4.17.1",
     "qrcode-terminal": "^0.12.0",
     "qrcodejs": "^1.0.0",
