--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,13 @@ services:
       - wapi_files:/wapi_files
     environment:
       - DEBUG=express:*
+      - ROCKETCHAT_URL=rocketchat:3000
     command:
       #node /app/index.js
-      nodemon /app/index.js
+      #nodemon /app/index.js
+      npm run dev
+    depends_on:
+      - rocketchat      
 
   rocketchat:
     image: rocketchat/rocket.chat:3.5.2
