--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "form-data": "^3.0.0",
     "helmet": "^4.1.0",
     "morgan": "^1.10.0",
+    "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "qrcodejs": "^1.0.0",
     "slugify": "^1.4.5",
