FIX error when same user on two clients simultaneously

--- a/config/config.json
+++ b/config/config.json
@@ -12,7 +12,20 @@
             "number": "5533XXXXXXX",
             "department": "DepartmentA",
             "manager_user": ["agent1"],
-            "default_closing_message": "Thank you for contacting this company. See you later!"
+            "default_closing_message": "Thank you for contacting company A. See you later!"
+        },
+        {
+            "name": "instance2",
+            "session_path": "/wapi_files/instance2/session.json",
+            "qr_path": "/wapi_files/instance2/last.qr",
+            "qr_png_path": "/wapi_files/instance2/last.qr.png",
+            "visitors_path": "/wapi_files/instance2/visitors/",
+            "media_path": "/wapi_files/instance2/media/",
+            "media_url": "http://127.0.0.1:3001/media/instance2/",
+            "number": "5533XXXXXXX",
+            "department": "DepartmentB",
+            "manager_user": ["agent1"],
+            "default_closing_message": "Thank you for contacting company B. See you later!"
         }
     ],
     "rocketchat": {
