--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "qrcode-terminal": "^0.12.0",
     "qrcodejs": "^1.0.0",
     "slugify": "^1.4.5",
-    "whatsapp-web.js": "^1.10.0"
+    "whatsapp-web.js": "^1.11.0",
+    "whatsapp.js": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
