--- a/dev.yml
+++ b/dev.yml
@@ -23,7 +23,7 @@ services:
       - rocketchat      
 
   rocketchat:
-    image: rocketchat/rocket.chat:3.7.1
+    image: rocketchat/rocket.chat:3.9.2
     command: >
       bash -c
         "for i in `seq 1 30`; do
@@ -40,7 +40,7 @@ services:
       - ADMIN_PASS=debug
       - ADMIN_EMAIL=admin@example.com
       - PORT=3000
-      - ROOT_URL=http://127.0.0.1:3000
+      - ROOT_URL=http://localhost:3000
       - MONGO_URL=mongodb://mongo:27017/rocketchat
       - MONGO_OPLOG_URL=mongodb://mongo:27017/local
       #- MAIL_URL=smtp://mailhog
@@ -70,7 +70,12 @@ services:
     command: 'bash -c "for i in `seq 1 30`; do mongo mongo/rocketchat --eval \"rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})\" && s=$$? && break || s=$$?; echo \"Tried $$i times. Waiting 5 secs...\"; sleep 5; done; (exit $$s)"'
     depends_on:
       - mongo
-    
+
+  mailhog:
+    image: mailhog/mailhog
+    ports: 
+      - 1025:1025 # smtp server
+      - 8025:8025 # web ui
 
 volumes:
   wapi_files: {}
