Fix when opened with custom inital message

--- a/config/config.json.dist
+++ b/config/config.json.dist
@@ -21,12 +21,12 @@
                 {
                     "day": "default",
                     "start": {
-                      "time": "11:14"
+                      "time": "07:00"
                     },
                     "finish": {
                       "time": "18:00"
                     },
-                    "open": false
+                    "open": true
                 },
                 {
                     "day": "Saturday",
