--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wapi",
-  "version": "1.11.2",
-  "description": "Rocketchat WhatsApp Connector",
+  "version": "0.1.1",
+  "description": "Rocketchat Api Connector",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@rocket.chat/sdk": "^0.2.9-2",
+    "@rocket.chat/sdk": "^0.2.9",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
@@ -21,7 +21,7 @@
     "qrcode-terminal": "^0.12.0",
     "qrcodejs": "^1.0.0",
     "slugify": "^1.4.6",
-    "whatsapp-web.js": "^1.11.2",
+    "whatsapp-web.js": "^1.12.0",
     "whatsapp.js": "0.0.1"
   },
   "devDependencies": {
