--- a/config/config.json.dist
+++ b/config/config.json.dist
@@ -3,11 +3,11 @@
     "instances": [
         {
             "name": "instance1",
-            "session_path": "/wapi_files/instance1/session.json",
-            "qr_path": "/wapi_files/instance1/last.qr",
-            "qr_png_path": "/wapi_files/instance1/last.qr.png",
-            "visitors_path": "/wapi_files/instance1/visitors/",
-            "media_path": "/wapi_files/instance1/media/",
+            "session_path": "/rocket_connect_files/instance1/session.json",
+            "qr_path": "/rocket_connect_files/instance1/last.qr",
+            "qr_png_path": "/rocket_connect_files/instance1/last.qr.png",
+            "visitors_path": "/rocket_connect_files/instance1/visitors/",
+            "media_path": "/rocket_connect_files/instance1/media/",
             "number": "5533XXXXXXX",
             "department": "DepartmentA",
             "manager_user": ["debug"],
@@ -59,7 +59,7 @@
         "bot_username": "bot",
         "bot_password": "bot@0192",
         "manager_user": ["debug"],
-        "secret_token": "wapi_secret"
+        "secret_token": "rocket_connect_secret"
     },
     "puppeteerOptions": {
         "puppeteer": {
