--- a/dev.yml
+++ b/dev.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
 
-  wapi:
-    image: wapi
+  rocket_connect:
+    user: "node:node"
+    image: rocket_connect
     cap_add: 
       - SYS_ADMIN
     ports:
@@ -10,7 +11,7 @@ services:
     build: .
     volumes:
       - .:/app
-      - wapi_files:/wapi_files
+      - rocket_connect_files:/rocket_connect_files
     environment:
       - DEBUG=express:*
       - ROCKETCHAT_URL=rocketchat:3000
@@ -45,6 +46,7 @@ services:
       - MONGO_OPLOG_URL=mongodb://mongo:27017/local
       #- MAIL_URL=smtp://mailhog
       - CREATE_TOKENS_FOR_USERS=true
+      - Accounts_TwoFactorAuthentication_Enforce_Password_Fallback=false
     depends_on:
       - mongo
     ports:
@@ -78,7 +80,7 @@ services:
       - 8025:8025 # web ui
 
 volumes:
-  wapi_files: {}
+  rocket_connect_files: {}
   rocket_uploads: {}
   rocket_db: {}
   rocket_db_config: {}
