--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "wapi",
+  "name": "rocket_connect",
   "version": "0.1.1",
   "description": "Rocketchat Api Connector",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
