--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "form-data": "^3.0.0",
     "helmet": "^4.2.0",
+    "moment-timezone": "^0.5.32",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "qrcode": "^1.4.4",
